--- a/resources/css/user.css
+++ b/resources/css/user.css
@@ -90,13 +90,7 @@ ul.menu-report {
 ul.menu-report li {
     border-bottom: 1px #ccc dashed;
 }
-.ant-menu-submenu-selected li {
-    /* margin-top: 0 !important;
-    height: 40px !important; */
-}
-.ant-menu-submenu-open .ant-menu-inline .ant-menu-item-selected {
-    /* background: #4b80f780 !important; */
-}
+
 .menu-report .menu-item-active {
     color: #1c6cb6 !important;
 }
@@ -105,9 +99,6 @@ ul.menu-report li {
     color: #1c6cb6 !important;
 }
 
-.menu-report .ant-menu-title-content:hover {
-    /* font-weight: 900; */
-}
 .menu-report .ant-menu-title-content {
     font-weight: normal;
     font-size: 16px;
@@ -115,4 +106,18 @@ ul.menu-report li {
 .menu-report .ant-menu-submenu-selected .ant-menu-submenu-title {
     color: #000 !important;
     font-weight: bold;
+}
+.ant-layout-sider-dark {
+    background-color: #fff;
+}
+.ant-menu-item {
+    text-transform: uppercase;
+    border-bottom: 1px #ccc dashed;
+    border-radius: 0px;
+}
+._red {
+    color: #ff4d4f !important;
+}
+.ul-info {
+    line-height: 28px;
 }
